--- a/views/resumes/index.ejs
+++ b/views/resumes/index.ejs
@@ -6,6 +6,15 @@
 
     <main class="page-container">
       <%- include('../partials/pageHeader.ejs'); %>
+
+      <% if (locals.parentResume) { %>
+        <div style="margin-bottom: 1rem;">
+          <a href="/resumes/<%= parentResume._id %>" style="color: #007bff; text-decoration: none;">
+            ← Back to <%= parentResume.name %>
+          </a>
+        </div>
+      <% } %>
+
       <a class="btn btn-primary btn-lg" href="/resumes/new">+ ADD RESUME</a>
 
       <%- include('../partials/tables/table.ejs', {
